<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MapActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapViewFragment"
        android:name="com.pracowniatmib.indoorlocalizationsystem.MapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettingsMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </androidx.fragment.app.FragmentContainerView>

    <Button
        android:id="@+id/buttonTestMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_map"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/mapViewFragment"
        app:layout_constraintEnd_toEndOf="@+id/mapViewFragment" />

    <TextView
        android:id="@+id/textDebugMap"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/txt_border"
        android:ems="10"
        android:text="@string/debug_test_window"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettingsMap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSettingsMap"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdateMap"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonUpdateMap"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"

        android:text="@string/update_map"
        app:layout_constraintBottom_toTopOf="@+id/buttonSensorModeMap"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSensorModeMap"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sensor_mode"
        app:layout_constraintBottom_toTopOf="@+id/buttonAlgorithmModeMap"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAlgorithmModeMap"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/algorithm_mode"
        app:layout_constraintBottom_toBottomOf="@+id/textDebugMap"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>